--- a/sass/rewrite.scss
+++ b/sass/rewrite.scss
@@ -186,6 +186,6 @@ button:not(:disabled) {
 .info {
     border-left: 4px solid #8ed6fb;
     background-color: #e9ecef;
-    padding: 0.5em 0.25em 0.05em 0.5em;
+    padding: 0.5em 0.25em 0.05em 1em;
     margin-top: 1.5em;
 }
